--- a/MVCDemo_Complete/Views/ProductC/Create.cshtml
+++ b/MVCDemo_Complete/Views/ProductC/Create.cshtml
@@ -29,8 +29,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <input asp-for="CategoryId" class="form-control" />
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
+                <select asp-for="CategoryId" class="form-control" 
+                        asp-items="@(new SelectList(@ViewBag.Categories,"Id","CategoryName"))">
+                 </select>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
