--- a/MVCDemo_Complete/Views/ProductC/Index.cshtml
+++ b/MVCDemo_Complete/Views/ProductC/Index.cshtml
@@ -49,7 +49,7 @@
                 <img src="@imgSrc" width="150" height="200" />
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CategoryId)
+                @Html.DisplayFor(modelItem => item.Category.CategoryName)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
